no change。add ignore items

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,100 @@
 ################################################################################
 
 /.vs
+/contrib/Instrumentation/MbUnit.Instrumentation/obj
+/contrib/Instrumentation/MbUnit.Plugin.CecilInstrumentation/obj
+/contrib/Instrumentation/MbUnit.Plugin.CecilInstrumentation.Tests/obj/Debug
+/contrib/Instrumentation/MbUnit.Plugin.CecilInstrumentation.Tests/obj/Release
+/contrib/NBehave/NBehave/obj
+/contrib/NBehave/NBehave.Specs/obj/Debug
+/contrib/NBehave/NBehave.Specs/obj/Release
+/contrib/Tools/MbUnit.Tools.CodeGenerator/obj/Debug
+/contrib/Tools/MbUnit.Tools.CodeGenerator/obj/Release
+/contrib/Tools/MbUnit.Tools.VsIntegration/obj
+/contrib/Yora/MbUnit.Yora/obj/Debug
+/contrib/Yora/MbUnit.Yora.Core/obj/Debug
+/src/Archimedes/Archimedes/obj/Debug
+/src/Archimedes/Archimedes.Tests/obj
+/src/Archimedes/Archimedes.Web.Tests/obj
+/src/Common/Gallio.Common.Splash/obj
+/src/Common/Gallio.Common.Splash.Demo/obj
+/src/Extensions/Ambience/Gallio.Ambience/obj/Debug
+/src/Extensions/Ambience/Gallio.Ambience.Server/obj/Debug
+/src/Extensions/AutoCAD/Gallio.AutoCAD.Plugin/obj
+/src/Extensions/AutoCAD/Gallio.AutoCAD.Tests/obj
+/src/Extensions/CCNet/CCNet.Gallio.WebDashboard.Plugin/obj/Debug
+/src/Extensions/ControlPanel/Gallio.ControlPanel/obj/Debug
+/src/Extensions/Copy/Gallio.Copy/obj/Debug
+/src/Extensions/CSUnit/Gallio.CSUnitAdapter/obj/Debug
+/src/Extensions/CSUnit/Gallio.CSUnitAdapter.Tests/obj/Debug
+/src/Extensions/DLR/Gallio.DLRIntegration/obj
+/src/Extensions/DLR/Gallio.DLRIntegration.Tests/obj/Debug
+/src/Extensions/Echo/Gallio.Echo/obj
+/src/Extensions/Echo/Gallio.Echo.Tests/obj
+/src/Extensions/Icarus/Gallio.Icarus/obj
+/src/Extensions/Icarus/Gallio.Icarus.Tests/obj/Debug
+/src/Extensions/MbUnit2/Gallio.MbUnit2Adapter/obj
+/src/Extensions/MbUnit2/Gallio.MbUnit2Adapter.TestResources/obj
+/src/Extensions/MbUnitCpp/Gallio.MbUnitCppAdapter.Tests/obj
+/src/Extensions/MSBuild/Gallio.MSBuildTasks/obj/Debug
+/src/Extensions/MSBuild/Gallio.MSBuildTasks.Tests/obj/Debug
+/src/Extensions/MSTest/Gallio.MSTestAdapter.TestResources/obj
+/src/Extensions/MSTest/Gallio.MSTestAdapter.Tests/obj
+/src/Extensions/NAnt/Gallio.NAntTasks/obj/Debug
+/src/Extensions/NAnt/Gallio.NAntTasks.Tests/obj/Debug
+/src/Extensions/Navigator/Gallio.Navigator/obj/Debug
+/src/Extensions/ReSharper/Gallio.ReSharperRunner/obj
+/src/Extensions/ReSharper/Gallio.ReSharperRunner.Tests/obj
+/src/Extensions/NUnit/Gallio.NUnitAdapter/obj
+/src/Extensions/NUnit/Gallio.NUnitAdapter.TestResources/obj
+/src/Extensions/Navigator/Gallio.Navigator.Tests/obj/Debug
+/src/Extensions/NUnit/Gallio.NUnitAdapter.Tests/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Sail/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Shell.Tests/obj
+/src/Gallio/Gallio/obj
+/src/Gallio/Gallio40/obj
+/src/MbUnit/Templates/VS2005/MbUnit.ItemTemplates.CSharp/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Shell/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Tip/obj
+/src/Extensions/TDNet/Gallio.TDNetRunner.UI/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Tip.Tests/obj
+/src/MbUnit/MbUnit/obj
+/src/MbUnit/MbUnit40/obj
+/src/MbUnit/MbUnit.Tests/obj
+/src/MbUnit/MbUnit40.Tests/obj
+/src/MbUnit/Templates/VS2005/MbUnit.ItemTemplates.VisualBasic/obj
+/src/Extensions/TDNet/Gallio.TDNetRunner.Tests/obj
+/src/Extensions/Utility/Gallio.Utility/obj/Debug
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Interop/obj/Debug
+/src/Extensions/RSpec/Gallio.RSpecAdapter/obj/Debug
+/src/Extensions/PowerShell/Gallio.PowerShellCommands/obj/Debug
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Interop.Tests/obj
+/src/MbUnit/MbUnit.Compatibility/obj/Release
+/src/MbUnit/Templates/VS2008/MbUnit.ItemTemplates.CSharp/obj/Debug
+/src/MbUnit/Templates/VS2008/MbUnit.ItemTemplates.VisualBasic/obj
+/src/Extensions/PowerShell/Gallio.PowerShellCommands.Tests/obj/Debug
+/src/Extensions/RSpec/Gallio.RSpecAdapter.Tests/obj/Debug
+/src/Extensions/TDNet/Gallio.TDNetRunner/obj/Debug
+/src/Extensions/TeamCity/Gallio.TeamCityIntegration.Tests/obj/Debug
+/src/Extensions/TypeMock/Gallio.TypeMockIntegration/obj
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Sail.Tests/obj/v10.0
+/src/Extensions/VisualStudio/Gallio.VisualStudio.Tip.Proxy/obj/v10.0
+/src/Extensions/Xunit/Gallio.XunitAdapter/obj/Debug
+/src/Extensions/Xunit/Gallio.XunitAdapter.TestResources/obj/Debug
+/src/Extensions/Xunit/Gallio.XunitAdapter.Tests/obj/Debug
+/src/Gallio/Gallio.Reports/obj/Debug
+/src/Gallio/Gallio.Tests/obj/Debug
+/src/Gallio/Gallio.UI/obj/Debug
+/src/Gallio/Gallio.UI.Tests/obj/Release
+/src/Gallio/Gallio35/obj/Debug
+/src/Gallio/Gallio40.Tests/obj
+/src/MbUnit/MbUnit.Compatibility.Tests/obj/Debug
+/src/MbUnit/MbUnit.TestResources/obj
+/src/MbUnit/MbUnit.TestResources.x64/obj/Debug
+/src/MbUnit/MbUnit.TestResources.x86/obj/Debug
+/src/MbUnit/MbUnit35/obj/Release
+/tools/Gallio.BuildTools/Gallio.BuildTools.SGen/obj
+/tools/Gallio.BuildTools/Gallio.BuildTools.Tasks/obj/Debug
+/tools/Gallio.ReflectionShim.Generator/obj/Debug
+/tools/Thrift/src/lib/csharp/ThriftMSBuildTask/obj/Debug
+/tools/Thrift/src/test/csharp/ThriftTest/obj/Debug
